@@ -1,11 +1,12 @@
-dnl Copyright (C) 1993-2006 Free Software Foundation, Inc.
+dnl -*- Autoconf -*-
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
 dnl that contains a configuration script generated by Autoconf, under
 dnl the same distribution terms as the rest of that program.
 
-dnl From Bruno Haible, Marcus Daniels.
+dnl From Bruno Haible, Marcus Daniels, Sam Steingold.
 
 AC_PREREQ(2.13)
 
@@ -43,7 +44,7 @@ esac
 esac
 ])
 case "$ffcall_cv_codeexec" in
-  *yes) AC_DEFINE(CODE_EXECUTABLE) ;;
+  *yes) AC_DEFINE([CODE_EXECUTABLE]) ;;
   *no)  ;;
 esac
 ])
