@@ -1,4 +1,5 @@
-dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
+dnl -*- Autoconf -*-
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -25,7 +26,7 @@ dnl most platforms with floating-point unit, including m68k-linux.
 ffcall_cv_c_float_return_ireg="guessing no")
 ])
 case "$ffcall_cv_c_float_return_ireg" in
-  *yes) AC_DEFINE(__IREG_FLOAT_RETURN__) ;;
+  *yes) AC_DEFINE([__IREG_FLOAT_RETURN__]) ;;
   *no) ;;
 esac
 ])
