@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2003 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -13,5 +13,5 @@ AC_PREREQ(2.57)
 AC_DEFUN([CL_MACH_VM],
 [CL_LINK_CHECK([vm_allocate], cl_cv_func_vm,
  , [vm_allocate(); task_self();],
-AC_DEFINE(HAVE_MACH_VM,,[have vm_allocate() and task_self() functions])dnl
+AC_DEFINE([HAVE_MACH_VM],[],[have vm_allocate() and task_self() functions])dnl
 )])
