@@ -1,5 +1,5 @@
 dnl -*- Autoconf -*-
-dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -90,7 +90,7 @@ else
 fi
 ])
 if test $cl_cv_func_mprotect_works = yes; then
-  AC_DEFINE(HAVE_WORKING_MPROTECT,,[have a working mprotect() function])
+  AC_DEFINE([HAVE_WORKING_MPROTECT],[],[have a working mprotect() function])
 fi
 fi
 ])
