@@ -1,4 +1,5 @@
-dnl Copyright (C) 1993-2008 Free Software Foundation, Inc.
+dnl -*- Autoconf -*-
+dnl Copyright (C) 1993-2009 Free Software Foundation, Inc.
 dnl This file is free software, distributed under the terms of the GNU
 dnl General Public License.  As a special exception to the GNU General
 dnl Public License, this file may be distributed as part of a program
@@ -34,7 +35,7 @@ ffcall_cv_c_struct_return_static="guessing no")
 CFLAGS="$save_CFLAGS"
 ])
 case "$ffcall_cv_c_struct_return_static" in
-  *yes) AC_DEFINE(__PCC_STRUCT_RETURN__) ;;
+  *yes) AC_DEFINE([__PCC_STRUCT_RETURN__]) ;;
   *no) ;;
 esac
 ])
